feat: enhance UI animations, unify forms, and refactor settings
- Update list item highlighting with double-flash scale and background animation
- Unify Equipment form styling with Trip/Expense forms
- Refactor TaxSettings to be a standalone component
- Merge RestoreSettings into BackupSettings for better UX
- Add web fallback for receipt export

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -51,5 +51,9 @@
 	<string>Wir benötigen Zugriff auf die Fotogalerie, um Belege zu speichern.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Wir benötigen Zugriff auf die Fotogalerie, um Belege auszuwählen.</string>
+	<key>UIFileSharingEnabled</key>
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
 </dict>
 </plist>
