--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/filesystem": "^7.1.5",
     "@capacitor/ios": "^7.4.4",
     "@capacitor/share": "^7.0.2",
+    "jszip": "^3.10.1",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0"
